# yumihub

./: .env  LICENSE  README.en.md  README.md  README_en.md  index.html  lingui.config.ts  package-lock.json  package.json  taiwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: ACTION.md  PROTOCOL.md  THEME_SCHEMA.md
scripts/: release.ps1
src/: index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/assets/themes/: default.json5
src-tauri/capabilities/: asset.json  default.json  desktop.json  dialog.json  event.json  fs.json  hotkey.json  log.json  net.json  notification.json  opener.json  shell.json  tray.json  updater.json  window.json
src-tauri/crates/database/: Cargo.toml  build.rs
src-tauri/crates/database/migrations/: 20260209_init.sql  20260412_fix.sql  20260419_collections.sql
src-tauri/crates/database/src/: lib.rs
src-tauri/crates/theme/: Cargo.toml
src-tauri/crates/theme/src/: constant.rs  engine.rs  entity.rs  errors.rs  lib.rs  parse.rs  processor.rs  transform.rs
src-tauri/crates/theme/src/schema/: ast.rs  ctx.rs  ir.rs  mod.rs
src-tauri/crates/theme/src/transform/: assemble.rs  normalize.rs  prune.rs  resolve.rs  style.rs  util.rs  validate.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  companion.rs  config.rs  db.rs  error.rs  game.rs  lib.rs  life_cycle.rs  main.rs  message.rs  resource.rs  screenshot.rs  shortcut.rs  state.rs  sys.rs  theme.rs  tray.rs  user.rs  util.rs
src-tauri/src/backup/: commands.rs  mod.rs
src-tauri/src/commands/: archive.rs  backup.rs  collection.rs  companion.rs  config.rs  game.rs  mod.rs  screenshot.rs  shortcut.rs  system.rs  user.rs
src-tauri/src/companion/: commands.rs  entity.rs  mod.rs
src-tauri/src/config/: entity.rs  fs.rs  mod.rs  serve.rs  synchronize.rs  util.rs
src-tauri/src/game/: commands.rs  entity.rs  mod.rs
src-tauri/src/infra/: archive.rs  fs.rs  mod.rs  process.rs
src-tauri/src/message/: entity.rs  mod.rs  traits.rs
src-tauri/src/resource/: mod.rs
src-tauri/src/screenshot/: commands.rs  entity.rs  mod.rs
src-tauri/src/shortcut/: commands.rs  entity.rs  mod.rs
src-tauri/src/state/: game.rs  traits.rs  user.rs  user_data.rs
src-tauri/src/sys/: entity.rs
src-tauri/src/user/: entity.rs  synchronize.rs
src/api/: bangumiApi.ts  uniform.ts  vndbApi.ts  ymGalApi.ts
src/components/: CommonCard.tsx  InputCard.tsx  MoreOption.tsx  PathCard.tsx  SelectCard.tsx  StepSliderCard.tsx  SuperSwitch.tsx  SwitchCard.tsx
src/components/BigPendingCard/: index.tsx
src/components/CommonCard/: index.tsx
src/components/GameList/: Game.tsx  index.tsx
src/components/InputCard/: index.tsx
src/components/Message/: index.tsx
src/components/MoreOption/: index.tsx
src/components/PathCard/: index.tsx
src/components/PendingGameCard/: index.tsx
src/components/PossibleGameCard/: index.tsx
src/components/SelectCard/: index.tsx
src/components/SideBar/: Avatar.tsx  Entry.tsx  RadialSidebar.tsx  Trigger.tsx  index.tsx
src/components/StepSliderCard/: index.tsx
src/components/SuperSwitch/: index.tsx
src/components/SwitchCard/: index.tsx
src/components/TitleBar/: ButtonGroupSeparator.tsx  MainButton.tsx  index.tsx
src/components/UserCard/: index.tsx
src/components/common/: CommonCard.tsx  ConfirmDialog.tsx  MoreOptions.tsx  SettingRow.tsx  SuperSwitch.tsx
src/components/custom/: AppButton.tsx  AppIcon.tsx  Background.tsx  Description.tsx  Entry.tsx  GameShelf.tsx  MainContentSlot.tsx  MainContnetSlot.tsx  Sidebar.tsx  Surface.tsx  SurfaceBase.tsx  Title.tsx  TitleBar.tsx  WindowToogleButton.tsx  WindowToogleIcon.tsx
src/components/ui/: card.tsx  (+2 more)
src/hooks/: useAppActions.ts  usePageBackground.ts  useShortcuter.ts  useShortcutr.ts  useTheme.ts  useUpdateChecker.ts
src/layout/: MainContnetSlot.tsx  Sidebar.tsx  Surface.tsx  TitleBar.tsx  index.tsx  layoutTest.tsx
src/lib/: background.ts  enum.ts  registry.ts  request.ts  resolve.ts  utils.ts
src/mock/: game.ts  theme.json
src/route/: index.tsx
src/store/: collectionStore.ts  compaionStore.ts  companionStore.ts  configStore.ts  dialogStore.ts  gameStore.ts  logStore.ts  pendingGamesStore.ts  possibleGamesStore.ts  sessionStore.ts  shortcutStore.ts  themeStore.ts  userStore.ts
src/style/: custom.css
src/types/: api.ts  companion.ts  config.ts  game.ts  node.ts  screenshot.ts  session.ts  shortcut.ts  sys.ts  user.ts
themes/: big-screen.json5  neon-glass.json5
(+59 files in other folders)
