[package]
name = "galhub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "galhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
] }
chrono = { version = "0.4.43", features = ["serde"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = "1.49.0"
reqwest = { version = "0.13", features = ["json", "stream"] }
directories = "6.0.0"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-system-info = { git = "https://github.com/HuakunShen/tauri-plugin-system-info", branch = "v2" }
zip = "6"
walkdir = "^2.5.0"
font-kit = "0.14.3"
window-vibrancy = "0.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
