[package]
name = "yumihub"
version = "0.1.0"
description = "A Tauri App"
authors = ["yumilengjiao"]
edition = "2021"


[lib]
name = "yumihub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace]
members = ["crates/database", "crates/theme"]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.49.0"
chrono = { version = "0.4.43", features = ["serde"] }

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
database = { path = "./crates/database" }
custom-theme = {path = "./crates/theme"}
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2.0.17"
reqwest = { version = "0.13", features = ["json", "stream"] }
directories = "6.0.0"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-system-info = { git = "https://github.com/HuakunShen/tauri-plugin-system-info", branch = "v2" }
zip = "6"
walkdir = "^2.5.0"
font-kit = "0.14.3"
window-vibrancy = "0.7"
sysinfo = "0.38.0"
tauri-plugin-fs = "2"
screenshots = "0.8.10"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }
tauri-plugin-notification = "2"
unrar = "0.5.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
uuid = { version = "1.20.0", features = ["v4"] }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = "s"
